syntax = "proto3";
package dstk;

import "common.proto";

message SplitPartReq {
  int64 id = 1;
  Partition sourcePartition = 2;
  Partitions targetPartitions = 3;
}

message SplitPartResponse {

}

service WorkerCtrl {
  rpc SplitPartition(SplitPartReq) returns (SplitPartResponse);
}
